# apidantic

./: .gitignore  README.md  justfile  pyproject.toml
apidantic/specs/: components.py  core.py  document.py  metadata.py  paths.py  server.py
tests/metadata/: test_server.py
tests/specs/: test_metadata.py  test_server.py
